---
source: src/manipulator/re.rs
expression: remove_match_def.err().unwrap()
---
TOML parse error at line 2, column 17
  |
2 |         query = "annis:tok @* doc"
  |                 ^^^^^^^^^^^^^^^^^^
Error in query:
[0:7-0:9] Unexpected token in query. Expected one of: ID
